--- a/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
@@ -168,13 +168,19 @@
     <ClCompile Include="InGameObjects\Track.cpp">
       <Filter>Source Files\InGameObjects</Filter>
     </ClCompile>
-    <ClCompile Include="InGameObjects\Pickups\Pickup.cpp">
+    <ClCompile Include="InGameObjects\Pickups\Barrier.cpp">
+      <Filter>Source Files\InGameObjects\Pickups</Filter>
+    </ClCompile>
+    <ClCompile Include="InGameObjects\Pickups\Missile.cpp">
       <Filter>Source Files\InGameObjects\Pickups</Filter>
     </ClCompile>
     <ClCompile Include="InGameObjects\Pickups\MissileLauncher.cpp">
       <Filter>Source Files\InGameObjects\Pickups</Filter>
     </ClCompile>
-    <ClCompile Include="InGameObjects\Pickups\Missile.cpp">
+    <ClCompile Include="InGameObjects\Pickups\Pickup.cpp">
+      <Filter>Source Files\InGameObjects\Pickups</Filter>
+    </ClCompile>
+    <ClCompile Include="InGameObjects\Pickups\Shield.cpp">
       <Filter>Source Files\InGameObjects\Pickups</Filter>
     </ClCompile>
   </ItemGroup>
@@ -266,13 +272,19 @@
     <ClInclude Include="InGameObjects\Track.h">
       <Filter>Header Files\InGameObjects</Filter>
     </ClInclude>
-    <ClInclude Include="InGameObjects\Pickups\Missile.h">
+    <ClInclude Include="InGameObjects\Pickups\Shield.h">
       <Filter>Header Files\InGameObjects\Pickups</Filter>
     </ClInclude>
     <ClInclude Include="InGameObjects\Pickups\Pickup.h">
       <Filter>Header Files\InGameObjects\Pickups</Filter>
     </ClInclude>
+    <ClInclude Include="InGameObjects\Pickups\Missile.h">
+      <Filter>Header Files\InGameObjects\Pickups</Filter>
+    </ClInclude>
     <ClInclude Include="InGameObjects\Pickups\MissileLauncher.h">
+      <Filter>Header Files\InGameObjects\Pickups</Filter>
+    </ClInclude>
+    <ClInclude Include="InGameObjects\Pickups\Barrier.h">
       <Filter>Header Files\InGameObjects\Pickups</Filter>
     </ClInclude>
   </ItemGroup>
