--- a/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
@@ -64,9 +64,6 @@
     <Filter Include="Source Files\InGameObjects">
       <UniqueIdentifier>{4d6df758-ec2b-4930-a1b4-d3ed29053209}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\InGameObjects\Entity">
-      <UniqueIdentifier>{a3582aa2-f59e-4c94-9992-439e7d449509}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\InGameObjects">
       <UniqueIdentifier>{92ea595f-e87f-4781-bd6d-046fdd49a1a2}</UniqueIdentifier>
     </Filter>
@@ -81,6 +78,9 @@
     </Filter>
     <Filter Include="Source Files\Components">
       <UniqueIdentifier>{6bc79c92-79a1-4bb4-a029-b308bcb00beb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\InGameObjects\Entities">
+      <UniqueIdentifier>{a3582aa2-f59e-4c94-9992-439e7d449509}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -160,19 +160,25 @@
       <Filter>Source Files\SoundEngine</Filter>
     </ClCompile>
     <ClCompile Include="InGameObjects\Entities\Entity.cpp">
-      <Filter>Source Files\InGameObjects\Entity</Filter>
+      <Filter>Source Files\InGameObjects\Entities</Filter>
     </ClCompile>
     <ClCompile Include="InGameObjects\Entities\EntityComponent.cpp">
-      <Filter>Source Files\InGameObjects\Entity</Filter>
+      <Filter>Source Files\InGameObjects\Entities</Filter>
     </ClCompile>
     <ClCompile Include="InGameObjects\Entities\RenderableComponent.cpp">
-      <Filter>Source Files\InGameObjects\Entity</Filter>
+      <Filter>Source Files\InGameObjects\Entities</Filter>
     </ClCompile>
     <ClCompile Include="InGameObjects\Track.cpp">
       <Filter>Source Files\InGameObjects</Filter>
     </ClCompile>
     <ClCompile Include="InGameObjects\TriggerCallback.cpp">
       <Filter>Source Files\InGameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Components\GraphicalComponent.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Components\PhysicalComponent.cpp">
+      <Filter>Source Files\Components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
