--- a/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClCompile Include="Components\PhysicalComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
+    <ClCompile Include="InGameObjects\CustomData.cpp">
+      <Filter>Source Files\InGameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="InGameObjects\ContactReport.cpp">
+      <Filter>Source Files\InGameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input\XboxController.h">
@@ -271,6 +277,9 @@
     </ClInclude>
     <ClInclude Include="Components\GraphicalComponent.h">
       <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="InGameObjects\ContactReport.h">
+      <Filter>Header Files\InGameObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
