Added AI: tries to avoid collisions GameVariable changed to allow AI viewing in versus if p2 pressed start, then no ai else if p2 isn't pressed, versus will show ai instead
Played with car chassis (physic) not sure if helps thrpugh paper
Entities taken out of renderingengine
added speed cheat =)
improved various things...

--- a/mPULSE Project/mPULSE/mPULSE.vcxproj
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="GameStates\PlayState.cpp" />
     <ClCompile Include="InGameObjects\ContactReport.cpp" />
     <ClCompile Include="InGameObjects\CustomData.cpp" />
+    <ClCompile Include="InGameObjects\Entities\Entities.cpp" />
     <ClCompile Include="InGameObjects\Entities\Entity.cpp" />
     <ClCompile Include="InGameObjects\Entities\EntityComponent.cpp" />
     <ClCompile Include="InGameObjects\Entities\RenderableComponent.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="GameStates\PlayState.h" />
     <ClInclude Include="InGameObjects\ContactReport.h" />
     <ClInclude Include="InGameObjects\CustomData.h" />
+    <ClInclude Include="InGameObjects\Entities\Entities.h" />
     <ClInclude Include="InGameObjects\Entities\Entity.h" />
     <ClInclude Include="InGameObjects\Entities\EntityComponent.h" />
     <ClInclude Include="InGameObjects\Entities\RenderableComponent.h" />
