--- a/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
@@ -368,6 +368,9 @@
     <ClInclude Include="RenderingEngine\DynamicImage.h">
       <Filter>Header Files\RenderingEngine</Filter>
     </ClInclude>
+    <ClInclude Include="RenderingEngine\ShopScreenInfo.h">
+      <Filter>Header Files\RenderingEngine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ModelLoader\ModelList.txt" />
