Reset the files back into folders

--- a/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClCompile Include="InGameObjects\Entities\Entities.cpp">
       <Filter>Source Files\InGameObjects\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="PhysicsEngine\Stream.cpp">
+      <Filter>Source Files\PhysicsEngine</Filter>
+    </ClCompile>
     <ClCompile Include="AI\AIPersonality.cpp">
       <Filter>Source Files\AI</Filter>
     </ClCompile>
@@ -224,14 +227,6 @@
     </ClCompile>
     <ClCompile Include="GameStates\StageSelectState.cpp">
       <Filter>Source Files\GameStates</Filter>
-    </ClCompile>
-<<<<<<< HEAD
-    <ClCompile Include="InGameObjects\Tracks.cpp">
-      <Filter>Source Files\InGameObjects</Filter>
-=======
-    <ClCompile Include="PhysicsEngine\Stream.cpp">
-      <Filter>Source Files\RenderingEngine</Filter>
->>>>>>> db24f4a7b6a7e9aa6323eb6d21b4a8727808711f
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -381,9 +376,6 @@
     </ClInclude>
     <ClInclude Include="GameStates\StageSelectState.h">
       <Filter>Header Files\GameStates</Filter>
-    </ClInclude>
-    <ClInclude Include="InGameObjects\Tracks.h">
-      <Filter>Header Files\InGameObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
