--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ replay.txt
 /mPULSE Project/mPULSE/Debug/*.obj
 /mPULSE Project/mPULSE/Debug/*.idb
 /mPULSE Project/mPULSE/Debug/*.pdb
+/mPULSE Project/mPULSE/Images/Thumbs.db
