Started adding pickups icons

--- a/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
@@ -232,7 +232,7 @@
       <Filter>Source Files\Util</Filter>
     </ClCompile>
     <ClCompile Include="mPULSE.cpp">
-      <Filter>Source Files\Util</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
