Reworked profile state and modified ones that it affected. AI now also have sweeping.

--- a/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj.filters
@@ -232,7 +232,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameStates\GameVariables.cpp">
-      <Filter>Source Files\InGameObjects</Filter>
+      <Filter>Source Files\GameStates</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
